# liblisa

./: .gitignore  Cargo.toml  Cross.toml  README.md  crates.io_version_check.sh  github_artifact_upload.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  crates.yml  rust.yml
arch/x64/build-vmimage/vmimage-x86-64/: Cargo.toml  link.x
arch/x64/build-vmimage/vmimage-x86-64/.cargo/: config.toml
arch/x64/build-vmimage/vmimage-x86-64/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  observer.rs  queue.rs  timer.rs  userspace.rs
arch/x64/liblisa-x64-observer/: Cargo.toml  build.rs
arch/x64/liblisa-x64-observer-shmqueue/: Cargo.toml
arch/x64/liblisa-x64-observer-shmqueue/src/: lib.rs  queue.rs  regs.rs
arch/x64/liblisa-x64-observer-shmqueue/src/frame/: command.rs  control.rs  mod.rs
arch/x64/liblisa-x64-observer/benches/: oracle.rs  vm.rs
arch/x64/liblisa-x64-observer/examples/: multitest.rs  test-qemu-mem-spdi.rs  test-qemu-spdi.rs  test.rs  undocumented.rs
arch/x64/liblisa-x64-observer/src/: lib.rs  selftest.rs  vm.rs
arch/x64/liblisa-x64-observer/vmimage-x86-64/: Cargo.toml  gdb.sh
arch/x64/liblisa-x64-observer/vmimage-x86-64/.cargo/: config.toml
arch/x64/liblisa-x64-observer/vmimage-x86-64/src/: interrupts.rs  lib.rs  main.rs  memory.rs  observer.rs  pci.rs  serial.rs  userspace.rs
arch/x64/liblisa-x64-observer/vmimage-x86-64/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
cli/liblisa-libcli/: Cargo.toml
cli/liblisa-libcli/src/: detect_changes.rs  enumerate.rs  infer_accesses.rs  infer_dataflows.rs  infer_encoding.rs  infer_validity.rs  lib.rs  observe.rs  quick_enumerate.rs  synthesize.rs  synthesize_encoding.rs
cli/liblisa-libcli/src/threadpool/: cache.rs  cpu.rs  enumeration.rs  mod.rs  oracle.rs  synthesis.rs  work.rs
cli/liblisa-semantics-tool/: Cargo.toml  README.md
cli/liblisa-semantics-tool/src/: arch_compare.rs  main.rs  merge.rs  progress.rs  server.rs
cli/liblisa-x64/: Cargo.toml
cli/liblisa-x64/src/: main.rs
crossbuild/arm64/: Dockerfile
crossbuild/x64-stretch/: build.sh
liblisa/: Cargo.toml  README.md
liblisa-core/: Cargo.toml
liblisa-core/benches/: randomization.rs
liblisa-core/src/: accesses.rs  arch.rs  computation.rs  counter.rs  dataflow.rs  encoding.rs  fake.rs  gen.rs  lib.rs  oracle.rs
liblisa-enc/: Cargo.toml
liblisa-enc/benches/: accesses.rs  dataflow.rs  observe.rs  skip.rs  validity.rs
liblisa-enc/src/: accesses.rs  cache.rs  dataflow.rs  encoding.rs  lib.rs  validity.rs
liblisa-enc/src/accesses/: computation.rs  mod.rs
liblisa-enc/src/changes/: addrs.rs  imm.rs  inputs.rs  mod.rs
liblisa-enc/src/cleanup/: accesses.rs  bits.rs  dontcare.rs  generalizations.rs  mod.rs
liblisa-enc/src/dataflow/: analyzer.rs  flow.rs  fuzz.rs  mod.rs  results.rs  spec.rs
liblisa-enc/src/encoding/: changes.rs  imm.rs  mod.rs
liblisa-enc/src/skip/: mod.rs  random_search.rs  tunnel.rs
liblisa-synth/: Cargo.toml
liblisa-synth/benches/: synthesis.rs  template_synthesis.rs  term_searcher.rs
liblisa-synth/src/: gen.rs  lib.rs  normalizer.rs  output.rs  predicate.rs  search.rs  synthesis_loop.rs  write_order.rs
liblisa-synth/src/cond/: cache.rs  caselist.rs  casemap.rs  combine_simple.rs  combiner.rs  input_hash.rs  isomorphisms.rs  mod.rs  switch.rs  synthesizer.rs  transitions.rs
liblisa-synth/src/search/: exprsearcher.rs  mod.rs  searcher.rs  termsearcher.rs
liblisa-synth/src/templates/: mod.rs  normalize_filter.rs  ordering.rs  preprocess.rs  symexec.rs
liblisa-synth/src/tree/: mapping.rs  mod.rs  synthesizer.rs
liblisa-synth/src/tree/expr_finder/: bitmap_mcs.rs  mcs.rs  mod.rs
liblisa-synth/src/utils/: delta_vec.rs  mod.rs
liblisa-x64/: Cargo.toml  build.rs
liblisa-x64-kmod/: Cargo.toml  build.rs  build_and_test.sh  test_remote.sh  testmod.sh
liblisa-x64-kmod/kmodtest/: Cargo.toml
liblisa-x64-kmod/module/: .gitignore  Makefile  genalladdrs.sh  lisakmod.c  lisakmod.h
liblisa-x64/benches/: ptrace.rs  system-state.rs
liblisa-x64/src/: arch.rs  lib.rs  memory.rs
liblisa-x64/src/oracle/: kmod_ptrace.rs  mod.rs  simple_ptrace.rs
liblisa/benches/: bitmap.rs  find-differences.rs  instantiation.rs  randomization.rs  system-state.rs  terms.rs  utils.rs
liblisa/examples/: liblisa-encoding-to-z3.rs
liblisa/src/: correctness.rs  enumeration.rs  lib.rs  synthesis.rs  value.rs  work.rs
liblisa/src/arch/: fake.rs  mod.rs  scope.rs  undef.rs
liblisa/src/arch/x64/: disasm.rs  mod.rs
liblisa/src/arch/x64/undef/: mod.rs  xed_convert.rs
liblisa/src/compare/: addresses.rs  computations.rs  group.rs  mapping.rs  mod.rs  rows.rs  split.rs  summary.rs
liblisa/src/encoding/: display.rs  indexed.rs  mcs.rs  mod.rs
liblisa/src/encoding/bitpattern/: locs.rs  mod.rs
liblisa/src/encoding/dataflows/: accesses.rs  address_computation.rs  inputs.rs  locs.rs  mod.rs
liblisa/src/encoding/merge/: mod.rs  semantical.rs  structural.rs
liblisa/src/instr/: counter.rs  extended.rs  filter.rs  filter_mcs.rs  map.rs  mod.rs  select_covering_set8.txt  set.rs  tree.rs
liblisa/src/oracle/: careful.rs  counter.rs  iter.rs  mod.rs  verifier.rs
liblisa/src/semantics/: mod.rs
liblisa/src/semantics/default/: builder.rs  computation.rs  mod.rs  ops.rs  smtgen.rs
liblisa/src/semantics/default/codegen/: mod.rs  sexpr.rs  smt.rs
liblisa/src/smt/: cache.rs  mod.rs  solver.rs  tree.rs
liblisa/src/smt/z3/: mod.rs
liblisa/src/smt/z3/tests/: computations.rs  equivalence.rs  mod.rs
liblisa/src/state/: addr.rs  byteview.rs  locs.rs  memory.rs  mod.rs  split_dests.rs
liblisa/src/state/jit/: complex.rs  gpreg.rs  mod.rs  simple.rs
liblisa/src/state/random/: mod.rs  value.rs
liblisa/src/utils/: cmov.rs  iter.rs  matrix.rs  min_cover_with_exclusions.rs  minisat.rs  mod.rs
liblisa/src/utils/bitmap/: fixed.rs  growing.rs  mod.rs  tiny.rs
liblisa/src/utils/mcs/: bfs.rs  mod.rs
lisacli/: Cargo.toml
lisacli/src/: lib.rs
results/: README.md
utils/: Makefile  README.md  minimal-executable  minimal-executable.s
(+5 files in other folders)
