[package]
name = "liblisa-enc"
version = "0.1.0"
edition = "2021"
description = "A tool for automated discovery and analysis of the ISA of a CPU."
license = "AGPLv3"
documentation = "https://docs.liblisa.nl/"
homepage = "https://liblisa.nl/"
repository = "https://github.com/liblisa/liblisa"

[[bench]]
name = "validity"
harness = false

[[bench]]
name = "accesses"
harness = false

[[bench]]
name = "dataflow"
harness = false

[[bench]]
name = "observe"
harness = false

[[bench]]
name = "skip"
harness = false

[dependencies]
liblisa = { version = "0.1.0", path = "../liblisa" }
thiserror = "1"
serde = { version = "1.0", features = [ "derive" ] }
rand = "0.8"
rand_xoshiro = "0.6"
itertools = "0.12.0"
log = "0.4"
arrayvec = "0.7"
fxhash = "0.2.1"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.10"
test-log = "0.2.10"
liblisa-x64-observer = { version = "0.1.0", path = "../arch/x64/liblisa-x64-observer" }
serde_json = "1.0"
rmp-serde = "1.1.1"