[package]
name = "liblisa-synth"
version = "0.1.0"
authors = ["Jos <Jos635@outlook.com>"]
edition = "2018"

[[bench]]
name = "synthesis"
harness = false

[dependencies]
liblisa-core = { path = "../liblisa-core" }
serde = { version = "1.0", features = [ "derive" ] }
itertools = "0.9"
bumpalo = "3.4"
arrayvec = "0.7"
log = "0.4"

[dev-dependencies]
rand = "0.7"
criterion = "0.3"
test-env-log = "0.2.0"
env_logger = "0.6"