[package]
name = "liblisa-synth"
version = "0.1.0"
edition = "2021"
description = "A tool for automated discovery and analysis of the ISA of a CPU."
license = "AGPLv3"
documentation = "https://docs.liblisa.nl/"
homepage = "https://liblisa.nl/"
repository = "https://github.com/liblisa/liblisa"

[[bench]]
name = "template_synthesis"
harness = false

[[bench]]
name = "term_searcher"
harness = false

[dependencies]
liblisa = { version = "0.1.0", path = "../liblisa" }
itertools = "0.12.0"
arrayvec = { version = "0.7", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
rand_xoshiro = "0.6"
log = "0.4"
rand = "0.8"
fxhash = "0.2.1"
lazy_static = "1.4"
thiserror = "1"
hashbrown = "0.14.3"
rayon = "1.5"

[dev-dependencies]
liblisa-x64-observer = { version = "0.1.0", path = "../arch/x64/liblisa-x64-observer" }
criterion = "0.5"
test-log = "0.2.10"
env_logger = "0.10"
rand_xoshiro = "0.6"
