[package]
name = "liblisa"
version = "0.1.1"
edition = "2021"
description = "A tool for automated discovery and analysis of the ISA of a CPU."
license = "AGPL-3.0-only"
documentation = "https://docs.liblisa.nl/"
homepage = "https://liblisa.nl/"
repository = "https://github.com/liblisa/liblisa"
readme = "README.md"

[features]
default = [ "z3", "x64-undef" ]
x64-undef = [ "dep:rusty-xed" ]

[[bench]]
name = "randomization"
harness = false

[[bench]]
name = "instantiation"
harness = false

[[bench]]
name = "utils"
harness = false

[[bench]]
name = "bitmap"
harness = false

[dependencies]
thiserror = "1"
serde = { version = "1.0", features = [ "derive" ] }
rand = "0.8"
itertools = "0.12.0"
log = "0.4"
hex = "0.4"
arrayvec = { version = "0.7", features = [ "serde" ] }
hashbrown = "0.14.3"
bitcode = "0.5.0"
schemars = { version = "0.8.16", features = ["arrayvec07"], optional = true }
rayon = "1.5"
fxhash = "0.2.1"
sha1 = "0.10.6"
arbitrary = { version = "1", features = ["derive"] }
z3 = { version = "0.12.1", git = 'https://github.com/prove-rs/z3.rs', optional = true }
rustc_apfloat = "0.2.0"
rusty-xed = { version = "0.1.1", optional = true }

[dev-dependencies]
env_logger = "0.10"
test-log = "0.2.10"
serde_json = "1.0"
criterion = "0.5"
rand_xoshiro = "0.6"
memoffset = "0.9.1"
clap = { version = "4.4.8", features = ["derive"] }