[package]
name = "liblisa-libcli"
version = "0.1.0"
edition = "2021"
description = "A tool for automated discovery and analysis of the ISA of a CPU."
license = "AGPL-3.0-only"
documentation = "https://docs.liblisa.nl/"
homepage = "https://liblisa.nl/"
repository = "https://github.com/liblisa/liblisa"

[dependencies]
liblisa = { version = "0.1.0", path = "../../liblisa" }
liblisa-enc = { version = "0.1.0", path = "../../liblisa-enc" }
liblisa-synth = { version = "0.1.0", path = "../../liblisa-synth" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.12.0"
rand = "0.8"
rand_xoshiro = "0.6"
colored = "2"
rayon = "1.5"
hex = "0.4"
log = "0.4"
nix = { version = "0.27.1", features = ["process", "ptrace", "signal", "sched"] }
rmp-serde = "1.1.1"
tempfile = "3.5.0"
thiserror = "1"

[dev-dependencies]
test-log = "0.2.10"
