[package]
name = "liblisa-semantics-tool"
version = "0.1.0"
edition = "2021"

[features]
default = ["nolog"]
nolog = ["log/release_max_level_off"]

[dependencies]
liblisa = { path = "../../liblisa", features = ["schemars", "z3"] }
serde_json = "1.0"
clap = { version = "4.4.8", features = ["derive"] }
schemars = "0.8.16"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = [ "derive" ] }
itertools = "0.12.0"
rand = "0.8"
rayon = "1.5"
bincode = "1.3.3"

[dev-dependencies]
test-log = "0.2.10"
