[package]
name = "liblisa-x64-observer-shmqueue"
version = "0.1.0"
edition = "2021"
description = "A tool for automated discovery and analysis of the ISA of a CPU."
license = "AGPLv3"
documentation = "https://docs.liblisa.nl/"
homepage = "https://liblisa.nl/"
repository = "https://github.com/liblisa/liblisa"

[dependencies]
memoffset = { version = "0.9", features = ["unstable_const"] }
static_assertions = "1.1.0"