[package]
name = "liblisa-x64-observer"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "vm"
harness = false

[[bench]]
name = "oracle"
harness = false

[dependencies]
itertools = "0.12.0"
log = "0.4"
nix = { version = "0.27.1", features = ["process", "signal", "sched"] }
liblisa = { path = "../../../liblisa" }
shared_memory = "0.12.4"
rand = "0.8"
tempfile = "3.3"
liblisa-x64-observer-shmqueue = { path = "../liblisa-x64-observer-shmqueue" }
thiserror = "1"

[build-dependencies]
bootloader = { version = "0.11.7" }

[dev-dependencies]
criterion = "0.5"
env_logger = "0.10"
test-log = "0.2.10"
rand = "0.8"
rand_xoshiro = "0.6"
