[package]
name = "vmimage-x86-64"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = { version = "0.11.7" }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
qemu-exit = "3.0.1"
pci_types = "0.2"
memoffset = { version = "0.9", features = ["unstable_const"] }
arr_macro = "0.1.3"
liblisa-x64-observer-shmqueue = { version = "0.1.0", path = "../../liblisa-x64-observer-shmqueue" }
arrayvec = { version = "0.7", default-features = false }

[workspace]